added error handling and data validation along with put and delete routes
